[package]
name = "book-interview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blockfrost = "0.2.1"
bytes = "1.5.0"
futures = "0.3.29"
reqwest = { version = "0.11.22", features = ["json"]}
serde = { version = "1.0.192", features = ["derive"]}
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }